--- a/styles/styles.css
+++ b/styles/styles.css
@@ -111,8 +111,8 @@ body {
 /*page-header*/
 
 .page-header {
-  background: linear-gradient(to bottom,
-      #FFFFFF 20px, #FFE17F 20px 100%);
+  /*background: linear-gradient(to bottom,
+      #FFFFFF 20px, #FFE17F 20px 100%);*/
 }
 
 .page-header-container {
@@ -124,7 +124,10 @@ body {
   min-height: 320px;
   color: #000000;
   z-index: 1;
+  background: linear-gradient(to bottom,
+      #FFFFFF 20px, #FFE17F 20px 100%)
 }
+
 /*
 .page-header::before {
   content: "";
@@ -385,6 +388,10 @@ input[type=search]:disabled {
 
 
 
+
+
+
+
 .navigation-menu {
   min-height: 50px;
   margin: 0 auto;
@@ -438,7 +445,7 @@ input[type=search]:disabled {
   padding-right: 1px;
 }
 
-.navigation-link:hover span {
+/*.navigation-link:hover span {
   opacity: 0.6;
 }
 
@@ -451,19 +458,23 @@ input[type=search]:disabled {
   outline: 2px solid #af4fff;
   outline-offset: 2px;
 }
+*/
+
 
 .navigation-item:first-child {
   position: relative;
 }
 
 .catalog-toggler {
-  display: flex;
+  /*display: flex;
   justify-content: space-between;
-  align-items: center;
-  padding: 15px 0;
+  align-items: center;*/
+  padding: 15px 57px 15px 0;
   width: 293px;
   box-sizing: border-box;
   z-index: 5;
+  margin-bottom: 14px;
+  outline: 2px solid red;
 }
 
 .catalog-toggler::after {
@@ -510,35 +521,30 @@ input[type=search]:disabled {
 }
 */
 
+/*
 .subcatalog-wrapper {
   display: none;
-}
+}*/
 
-.navigation-item:focus-within .subcatalog {
-  display: block;
-}
-
-.navigation-item:focus-within .catalog-toggler::after {
-  display: none;
-}
-.navigation-item:focus-within .catalog-toggler::before {
-  display: block;
-}
 
 
 .subcatalog {
   position: absolute;
   margin: 0 auto;
-  padding: 0 60px 30px 60px;
-  padding-bottom: 27px;
+  padding: 0 60px 35px 60px;
   top: 65px;
   left: -60px;
   width: 1160px;
-  min-height: 130px;
+  min-height: 147px;
   box-sizing: border-box;
   list-style-type: none;
   display: flex;
   background-color: #FFE17F;
+  display: none;
+}
+
+.subcatalog-column {
+  background-color: #af4fff;
 }
 
 .subcatalog-list {
@@ -547,6 +553,7 @@ input[type=search]:disabled {
   list-style-type: none;
   width: 222px;
   margin-right: 30px;
+  background-color: #FF3D3D;
 }
 
 .subcatalog-item {
@@ -561,6 +568,34 @@ input[type=search]:disabled {
   color: #000000;
   text-decoration: none;
 }
+
+
+.menu:focus-within .subcatalog {
+  display: flex;
+}
+
+.menu:focus-within .catalog-toggler::after {
+  display: none;
+}
+
+.menu:focus-within .catalog-toggler::before {
+  display: block;
+}
+
+.menu:hover .subcatalog {
+  display: flex;
+}
+
+.menu:hover .catalog-toggler::after {
+  display: none;
+}
+
+.menu:hover .catalog-toggler::before {
+  display: block;
+}
+
+
+
 
 .subcatalog-link:hover {
   opacity: 0.6;
@@ -577,7 +612,7 @@ input[type=search]:disabled {
 }
 
 
-.navigation-item.menu:focus .catalog-toggler::after {
+.menu:focus .catalog-toggler::after {
   opacity: 0.3;
 }
 
@@ -586,26 +621,26 @@ input[type=search]:disabled {
   outline-offset: 2px;
 }
 
-.navigation-item.menu:focus .subcatalog-wrapper {
+.menu:focus-within .subcatalog {
   display: block;
 }
 
 
 
 
-.navigation-item.menu:hover .catalog-toggler::after {
+.menu:hover .catalog-toggler::after {
   opacity: 1;
 }
 
-.navigation-item.menu:hover .subcatalog-wrapper {
+.menu:hover .subcatalog-wrapper {
   display: block;
 }
 
-.navigation-item.menu:active .catalog-toggler::after {
+.menu:active .catalog-toggler::after {
   opacity: 1;
 }
 
-.navigation-item.menu:active .subcatalog-wrapper {
+.menu:active .subcatalog-wrapper {
   display: block;
 }
 
@@ -638,8 +673,8 @@ input[type=search]:disabled {
   position: absolute;
   top: 40px;
   right: -77px;
-  z-index: 10;
   padding: 20px;
+  z-index: 10;
   box-sizing: border-box;
   font-family: "Rubik", sans-serif;
   font-size: 16px;
@@ -650,30 +685,25 @@ input[type=search]:disabled {
   display: none;
 }
 
+.popover-open {
+  display: none;
+}
+
 .popover-cart {
   width: 320px;
 }
 
 .popover-cart:after {
   content: "";
-  background-image: url("../images/modal-delta.svg");
-  width: 14px;
-  height: 6px;
   position: absolute;
-  /*transform: rotate(180deg);*/
-  bottom: 100%;
   left: 0;
   right: 0;
   margin-left: 147px;
   margin-right: auto;
-}
-
-
-
-
-
-.popover-open {
-  display: block;
+  width: 14px;
+  height: 6px;
+  bottom: 100%;
+  background-image: url("../images/modal-delta.svg");
 }
 
 .popover-content {
@@ -687,22 +717,20 @@ input[type=search]:disabled {
 }
 
 .cart-item {
-  position: relative;
   margin-bottom: 20px;
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
 }
 
-.cart-wrapper {
+.cart-link {
+  position: relative;
   display: flex;
+  margin-right: auto;
   justify-content: flex-start;
   align-items: flex-start;
-  margin-right: auto;
-}
-
-.cart-item + .cart-item {
-  border-top: 1px solid rgba(0, 0, 0 0.1);
+  color: #ffffff;
+  text-decoration: none;
 }
 
 .cart-item-image {
@@ -710,25 +738,8 @@ input[type=search]:disabled {
   margin-right: 23px;
 }
 
-/*
-.cart-item-name {
-  margin-right: auto;
-}
-*/
-.cart-wrapper {
-  position: relative;
-}
-
-.cart-wrapper::after {
-  content: "";
-  position: absolute;
-  width: 250px;
-  height: 47px;
-  box-sizing: border-box;
-  top: -2px;
-  left: -2px;
-  border: 2px solid #af4fff;
-  display: none;
+.cart-item + .cart-item {
+  border-top: 1px solid rgba(0, 0, 0 0.1);
 }
 
 .cart-item-button:hover {
@@ -740,24 +751,22 @@ input[type=search]:disabled {
 }
 
 .cart-item-button:focus {
-  opacity: 1;
   outline: 2px solid #af4fff;
   outline-offset: 2px;
 }
 
-.cart-wrapper:hover {
+.cart-link:hover {
   opacity: 0.6;
 }
 
-.cart-wrapper:focus .cart-wrapper::before {
-  display: block;
-}
-
-.cart-wrapper:active {
+.cart-link:active {
   opacity: 0.3;
 }
 
-
+.cart-link:focus {
+  outline: 2px solid #af4fff;
+  outline-offset: 2px;
+}
 
 .cart-item-wrapper {
   margin-bottom: 20px;
@@ -776,11 +785,11 @@ input[type=search]:disabled {
   display: block;
   padding: 14.5px 0;
   width: 280px;
-  border: none;
-  box-sizing: border-box;
-  background: #FFFFFF;
-  color: #000000;
   text-align: center;
+  box-sizing: border-box;
+  border: none;
+  color: #000000;
+  background: #FFFFFF;
 }
 
 .popover-close-button:hover {
@@ -788,7 +797,6 @@ input[type=search]:disabled {
 }
 
 .popover-close-button:focus {
-  background: #FFFFFF;
   outline: 2px solid #af4fff;
   outline-offset: 2px;
 }
@@ -819,6 +827,10 @@ input[type=search]:disabled {
   /*background: linear-gradient(to bottom,
       #FFE17F 300px, #FFFFFF 150px 100%);
   outline: 2px solid #af4fff;*/
+}
+
+.slider-image {
+  display: block;
 }
 
 .promo-product-slider {
@@ -1050,7 +1062,7 @@ input[type=search]:disabled {
 }
 
 .products-categories-title {
- margin: 0;
+  margin: 0;
   order: -1;
   font-size: 18px;
   line-height: 24px;
@@ -1365,8 +1377,8 @@ input[type=search]:disabled {
 }
 
 .advantage-link:hover .title-advantage::after {
-  fill: #000000;
   color: #000000;
+  stroke: #000000;
   opacity: 1;
 }
 
@@ -1566,95 +1578,90 @@ input[type=search]:disabled {
 
 .container-subscribe {
   padding-top: 64px;
-  min-height: 357px;
+
 }
 
 .subscribe-text {
   margin-bottom: 144px;
-  min-height: 100px;
+  margin-left: 7px;
   display: flex;
   justify-content: space-between;
-  align-items: flex-end;
+  align-items: center;
 }
 
 . title-subscribe {
-  padding-left: 14px;
-  margin-right: 252px;
-  width: 355px;
+  width: 348px;
   box-sizing: content-box;
 }
 
 .text-subscribe {
-  width: 560px;
+  width: 553px;
 }
 
 .subscribe-email {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  min-height: 57px;
+  padding-bottom: 57px;
 }
 
 .subscribe-form {
   display: flex;
   justify-content: flex-start;
-  border: none;
+  outline: none;
 }
 
-.subscribe-form input[type=email] {
+.email-email {
   position: relative;
+  padding: 11px 0 14px 16px;
   width: 557px;
-  background-color: #F0F0F0;
-  border: none;
-  border-bottom: 3px solid #C4C4C4;
-  padding: 11px 16px 14px 16px;
   box-sizing: border-box;
   font-family: "Rubik", sans-serif;
   font-size: 18px;
   line-height: 30px;
-  color: rgba(26.67, 26.67, 26.67, 0.5);
+  color: #444444;
+  opacity: 1;
+  background-color: #F0F0F0;
+  border: 0;
+  outline: none;
+  border-bottom: 3px solid #C4C4C4;
 }
 
-.subscribe-form::placeholder {
+.subscribe-form ::placeholder {
+  font-size: 18px;
+  line-height: 30px;
   color: #444444;
   opacity: 0.5;
 }
 
-input[type=email]:active {
-  border-bottom: 3px solid #C4C4C4;
+.email-email:invalid {
   color: #444444;
+  opacity: 1;
+  border-bottom: 3px solid #FF3D3D;
   background-color: #F0F0F0;
 }
 
-input[type=email]:focus {
-  background-color: #C4C4C4;
-  color: rgba(26.67, 26.67, 26.67, 0.5);
+.email-email:focus {
+  background-color: #DCDCDC;
+  outline: none;
+  border-bottom: 3px solid #C4C4C4;
 }
 
-input[type=email]:invalid {
-  border-bottom: 3px solid #FF3D3D;
-  color: rgba(26.67, 26.67, 26.67, 0.5);
-
+.email-email:active {
+  border-bottom: 3px solid #C4C4C4;
+  color: red;
+  background-color: #F0F0F0;
 }
-
-input[type=email]:disabled {
-  background-color: #C4C4C4;
-  opacity: 0.5;
-}
-
-
 
 .subscribe-button {
   padding: 18px 39px;
   box-sizing: border-box;
   width: 253px;
   border: 3px solid #C4C4C4;
+  background-color: transparent;
 }
 
-.subscribe-button:focus
-
-/*::after*/
-  {
+.subscribe-button:focus {
   outline: 2px solid #af4fff;
   outline-offset: 2px;
 }
@@ -1934,9 +1941,9 @@ input[type=email]:disabled {
 
 .modal-container {
   position: fixed;
+  display: flex;
   top: 0;
   left: 0;
-  display: flex;
   width: 100%;
   height: 100%;
   background-color: rgba(240, 240, 240, 0.9);
@@ -1944,16 +1951,17 @@ input[type=email]:disabled {
 }
 
 .modal-container-close {
-  display: none;
+  display: block;
 }
 
 .modal {
   position: relative;
   margin: auto;
   padding: 72px 80px;
+  box-sizing: border-box;
   border: 10px solid #000000;
-  box-shadow: 0 10px 0 rgba(0, 0, 0, 0.1);
   background: #FFFFFF;
+  box-shadow: 0 10px 0 rgba(0, 0, 0, 0.1);
 }
 
 .modal-advantage {
@@ -1985,11 +1993,9 @@ input[type=email]:disabled {
 }
 
 .modal-close-button:focus {
-  opacity: 1;
   outline: 2px solid #af4fff;
   outline-offset: 2px;
 }
-
 
 .modal-title {
   margin: 0;
@@ -1997,6 +2003,7 @@ input[type=email]:disabled {
   font-family: "Raleway", sans-serif;
   font-size: 50px;
   line-height: 50px;
+  font-style: normal;
   font-weight: 800;
   color: #000000;
 }
@@ -2008,36 +2015,45 @@ input[type=email]:disabled {
   align-items: flex-start;
 }
 
-.advantage-form .field-group {
+.field-group {
   margin: 0;
 }
 
 .advantage-form-field {
-
   padding: 20px 50px 20px 20px;
   width: 360px;
   box-sizing: border-box;
   background-color: #F0F0F0;
   border: none;
+  outline: none;
 }
 
-.advantage-form .field-name,
-.advantage-form .field-email {
+.field-name:focus {
+  outline: 2px solid #af4fff;
+  offset: -2px;
+}
 
-  width: 360px;
+.field-product {
+  padding: 20px;
+  width: 540px;
   box-sizing: border-box;
 }
 
-.advantage-form .field-product {
-  padding: 20px;
-  width: 540px;
+.field-product:focus {
+  outline: 2px solid #af4fff;
+  offset: -2px;
 }
 
-.advantage-form .field-amount {
+.field-amount {
   width: 180px;
   padding: 20px 60px;
+  box-sizing: border-box;
   text-align: center;
-  border: none;
+}
+
+.field-amount:focus {
+  outline: 2px solid #af4fff;
+  offset: -2px;
 }
 
 .field-group:first-child {
@@ -2045,17 +2061,36 @@ input[type=email]:disabled {
 }
 
 .label-field {
+  display: block;
+  margin-bottom: 14px;
   font-weight: 700;
   font-size: 18px;
   line-height: 20px;
   color: #000000;
 }
 
-.field-group .advantage-form-field::placeholder {
-  color: rgba(0, 0, 0 0.3);
+.field-group ::placeholder {
+  color: #000000;
+  opacity: 0.3;
   font-family: "Rubik", sans-serif;
   font-size: 16px;
   line-height: 20px;
+}
+
+.field-group-email ::placeholder {
+  color: #000000;
+  opacity: 1;
+}
+
+.field-email + span {
+  display: block;
+  font-size: 14px;
+  color: #FF3D3D;
+}
+
+.field-email {
+  outline: 2px solid #FF3D3D;
+  outline-offset: -2px;
 }
 
 .field-group-name {
@@ -2076,91 +2111,204 @@ input[type=email]:disabled {
 
 .field-group-email {
   position: relative;
-  margin: 0;
-  padding: 0;
 }
 
-.field-email::placeholder {
-  color: #000000;
-  opacity: 1;
-}
-
-input[type="email"] {
-  border: 0;
-}
-
-.field-group-email span {
-  font-size: 16px;
-  line-height: 20px;
-  color: #000000;
-}
-
-.field-group-email:after {
+.field-group-email::after {
   content: "";
   position: absolute;
   width: 15px;
   height: 12px;
-  bottom: 54px;
+  top: 56px;
   right: 20px;
   background-image: url("../images/email.svg");
   background-repeat: no-repeat;
   background-position: center;
+}
 
+.label-field-amount {
+  position: relative;
+  display: inline-block;
+  margin-bottom: 3px;
+  padding-right: 8px;
+  max-width: 180px;
+  word-break: break-all;
 }
 
 .field-group-amount {
   position: relative;
 }
 
-.field-amount::placeholder {
+.field-group-amount ::placeholder {
   color: #000000;
   opacity: 1;
 }
 
-.label-field-amount {
-  position: relative;
-  padding-right: 8px;
-}
-
-.field-group input[type="email"]:hover {
-  background-color: #DCDCDC;
-}
-
-
-.field-group input[type="email"]:focus {
-  background-color: #F0F0F0;
-  border: 2px solid #af4fff;
-}
-
-.field-group input[type="email"]:focus + span {
-  color: #000000;
-}
-
-
-
-.field-group input[type="email"]:active {
-  background-color: #F0F0F0;
-}
-
-
-.field-group .input[type="email"]::placeholder:active {
-  color: #000000;
-  opacity: 1;
-}
-
-.field-group input[type="email"]:invalid {
-  border: 2px solid #FF3D3D;
-
-}
-
-.field-group input[type="email"]:invalid + span {
-  color: #FF3D3D;
+.button-amount {
+  position: absolute;
+  display: block;
+  width: 60px;
+  height: 60px;
   box-sizing: border-box;
+  border: 0;
+  outline: none;
+  background-color: transparent;
 }
 
-.field-group .input[type="email"]:disabled {
+.button-amount:focus {
+  outline: 2px solid #af4fff;
+  offset: -2px;
+}
+
+.button-amount-minus {
+  bottom: 0;
+  left: 0;
+}
+
+.button-amount-plus {
+  bottom: 0;
+  right: 0;
+}
+
+.field-email:invalid {
+  outline: 2px solid #FF3D3D;
+  offset: -2px;
+}
+
+.field-email:invalid + span {
+  color: #FF3D3D;
+}
+
+.field-email:disabled {
   opacity: 0.3;
 }
+
+.field-email:active {
+  background-color: #F0F0F0;
+  color: #000000;
+  opacity: 1;
+}
+
+.field-email:active + span {
+  color: #000000;
+}
+
+
+
+.field-email:hover {
+  background-color: #DCDCDC;
+  outline: none;
+  opacity: 0.3;
+}
+
+.field-email:hover + span {
+  color: #000000;
+}
+
+.field-email:focus {
+  background-color: #F0F0F0;
+  outline: 2px solid #af4fff;
+  offset: -2px;
+}
+
+.field-email:focus + span {
+  color: #000000;
+}
+
+
+
+
+
+
+
+
+
+
+.field-group-amount input[type="button"] {
+  position: absolute;
+  margin: 0;
+  padding: 0;
+  width: 60px;
+  height: 60px;
+  box-sizing: border-box;
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+}
+
+
+
+/*Количество*/
+
+.label-field-icon {
+  position: relative;
+  margin-bottom: 11px;
+  display: flex;
+  align-items: flex-end;
+
+  padding-right: 8px;
+  max-width: 180px;
+  background-color: #af4fff;
+}
+
+
+.tooltip {
+  position: relative;
+  width: 26px;
+  height: 26px;
+}
+
+.tooltip-toggle {
+  padding: 0;
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 26px;
+  height: 26px;
+  border: none;
+  border-radius: 50%;
+  background-color: #FFE17F;
+  cursor: pointer;
+}
+
+.tooltip-text {
+  position: absolute;
+  left: -140px;
+  top: 36px;
+  padding: 19px 17px 19px 19px;
+  width: 200px;
+  font-size: 16px;
+  line-height: 20px;
+  font-weight: normal;
+  word-break: break-word;
+  text-transform: none;
+  color: #FFFFFF;
+  background-color: #000000;
+  box-shadow: 0 10px 0x rgba(0, 0, 0, 0.1);
+  z-index: 10;
+  display: none;
+
+}
+
+.tooltip-text:after {
+  content: "";
+  position: absolute;
+  margin-left: 146px;
+  margin-right: auto;
+  left: 0;
+  right: 0;
+  width: 14px;
+  height: 6px;
+  background-image: url("../images/modal-delta.svg");
+  bottom: 100%;
+}
+
+.tooltip-toggle:hover + .tooltip-text,
+.tooltip-toggle:focus + .tooltip-text {
+  display: block;
+}
+
+
 
 
 
@@ -2186,125 +2334,6 @@ input[type="email"] {
   outline: 2px solid #af4fff;
   outline-offset: 2px;
 }
-
-
-
-
-
-
-
-.field-group-amount input[type="button"] {
-  position: absolute;
-  margin: 0;
-  padding: 0;
-  width: 60px;
-  height: 60px;
-  box-sizing: border-box;
-  border: none;
-  background-color: transparent;
-  cursor: pointer;
-}
-
-.button-amount-minus {
-  bottom: 0;
-  left: 0;
-  background-image: url("../images/modal-minus.svg");
-  background-repeat: no-repeat;
-  background-position: center;
-}
-
-.button-amount-plus {
-  bottom: 0;
-  right: 0;
-  background-image: url("../images/modal-plus.svg");
-  background-repeat: no-repeat;
-  background-position: center;
-}
-
-
-
-
-
-
-.tooltip {
-  position: absolute;
-  margin-top: 4px;
-  margin-left: 2px;
-  width: 16px;
-  height: 16px;
-}
-
-
-
-.tooltip-toggle {
-  border: none;
-  background-color: #FFE17F;
-  width: 26px;
-  height: 26px;
-  border-radius: 50%;
-  padding: 0;
-  margin: 0;
-  display: block;
-}
-
-.tooltip-icon {
-  width: 100%;
-  height: 100%;
-  /*color: #242424;*/
-  display: block;
-}
-
-/*
-.tooltip-toggle:hover .tooltip-icon {
-  color: #AF7842;
-}*/
-
-
-.tooltip-text {
-
-  background-color: #000000;
-  color: #FFFFFF;
-  font-size: 16px;
-  line-height: 20px;
-  font-weight: normal;
-  text-transform: none;
-  padding: 19px 17px 19px 19px;
-  display: block;
-  width: 200px;
-  box-shadow: 0 10px 0x rgba(0, 0, 0, 0.1);
-  position: absolute;
-  margin-bottom: 6px;
-  left: -140px;
-  top: 30px;
-  display: none;
-}
-
-.tooltip-text:after {
-  content: "";
-  background-image: url("../images/modal-delta.svg");
-  width: 14px;
-  height: 6px;
-  position: absolute;
-  /*transform: rotate(180deg);*/
-  bottom: 100%;
-  left: 0;
-  right: 0;
-  margin-left: 147px;
-  margin-right: auto;
-}
-
-
-.tooltip-toggle:hover + .tooltip-text,
-.tooltip-toggle:focus + .tooltip-text {
-  display: block;
-}
-
-.label-field-icon {
-  position: relative;
-  padding-right: 26px;
-}
-
-
 
 
 
@@ -2522,10 +2551,11 @@ input[type="email"] {
 
 /*COLOR*/
 .title-color {
-margin-bottom: 24px;
+  margin-bottom: 24px;
 
 
 }
+
 .product-filter-list {
   margin: 0;
   padding: 0;
@@ -2668,6 +2698,7 @@ margin-bottom: 24px;
 .control-input[type="radio"]:focus + .control-mark {
   border: 2px solid #CCCCCC;
 }
+
 .product-filter-group-bluetooth {
   margin-bottom: 40px;
 }
@@ -2948,6 +2979,7 @@ margin-bottom: 24px;
 .product-card-link:focus .card-button {
   display: none;
 }
+
 .product-card-link:focus .product-card-image-wrapper:after {
   display: none;
 }
