--- a/styles/styles.css
+++ b/styles/styles.css
@@ -110,10 +110,12 @@ body {
 
 /*page-header*/
 
+/*
 .page-header {
-  /*background: linear-gradient(to bottom,
-      #FFFFFF 20px, #FFE17F 20px 100%);*/
+  background: linear-gradient(to bottom,
+      #FFFFFF 20px, #FFE17F 20px 100%);
 }
+*/
 
 .page-header-container {
   position: relative;
@@ -164,32 +166,33 @@ body {
   width: 517px;
 }
 
-input[type=search] {
+.search {
   position: relative;
-  padding: 10px 0;
-  padding-left: 48px;
+  padding: 10px 20px 10px 48px;
   width: 357px;
   box-sizing: border-box;
   text-align: left;
+  font-size: 16px;
   background: transparent;
-  border: 2px solid #000000;
+  outline: 2px solid #000000;
   background-image: url("../images/icon-search.svg");
   background-size: 16px 16px;
   background-position: center left 16px;
   background-repeat: no-repeat;
   border-top-left-radius: 20px;
   border-bottom-left-radius: 20px;
-  outline: none;
+  /*outline: none;*/
+  background-color: #af4fff;
 }
-
+/*
 input[type="search" i] {
   font-size: 16px;
 
 }
-
+*/
 .search ::placeholder {
   color: #000000;
-  font-size: 18x;
+  font-size: 16x;
   line-height: 20px;
   opacity: 0.3;
 }
@@ -793,10 +796,6 @@ input[type=search]:disabled {
   background: transparent;
   border: none;
   cursor: pointer;
-
-  /* background-image: url("..images/arrow-back.svg");
-  background-position: center;
-  background-repeat: no-repeat;*/
 }
 
 .arrow:hover {
@@ -843,9 +842,9 @@ input[type=search]:disabled {
 .promo-product-content .button {
   margin-bottom: 50px;
   padding: 10px 5px;
-  box-sizing: border-box;
   width: 220px;
   height: 40px;
+  box-sizing: border-box;
   background: linear-gradient(to top,
       #FFFFFF 40%, #FFE17F 40% 60%, #FFFFFF 60%);
 }
@@ -926,16 +925,16 @@ input[type=search]:disabled {
   width: 12px;
   height: 12px;
   box-sizing: border-box;
-  cursor: pointer;
   background-color: transparent;
   border-radius: 50%;
   border: 2px solid #000000;
+  cursor: pointer;
 }
 
 .indicators-button::after {
-  display: none;
   content: "";
   position: absolute;
+  display: none;
   top: calc(50% - 7px);
   left: calc(50% - 7px);
   width: 14px;
@@ -967,15 +966,14 @@ input[type=search]:disabled {
 }
 
 .products-categories-list {
-  display: flex;
   margin: 0;
   padding: 0;
+  display: flex;
   justify-content: space-between;
   list-style-type: none;
 }
 
 .products-categories-item {
-
   margin-right: 40px;
   width: 160px;
   min-height: 253px;
@@ -1002,44 +1000,45 @@ input[type=search]:disabled {
 
 .products-categories-image {
   margin-bottom: 32px;
+  display: block;
   width: 160px;
   height: 160px;
   background-color: #FFE17F;
 }
 
-.products-categories-item:focus-within {
-  outline: 2px solid #af4fff;
-  outline-offset: 2px;
 
-}
 
 .products-categories-link:after {
   content: "";
   position: absolute;
-  width: 164px;
-  height: 257px;
   top: -2px;
   left: -2px;
+  width: 164px;
+  height: 257px;
   display: none;
   outline: 2px solid #af4fff;
+}
+
+.products-categories-item:focus-within {
+  outline: 2px solid #af4fff;
+  outline-offset: 2px;
 }
 
 .products-categories-link:focus .products-categories-link:after {
   display: block;
 }
 
-.products-categories-item:hover .products-categories-image {
+.products-categories-link:hover .products-categories-image {
   background: linear-gradient(to bottom,
       #FFC700 160px, #FFFFFF 160px 100%);
 }
 
-.products-categories-item:active {
+.products-categories-link:active {
   opacity: 30%;
 }
 
 
-/*services БЛОК Сервисы*/
-
+/*services Сервисы*/
 .services {
   min-height: 391px;
   margin-bottom: 70px;
@@ -1181,7 +1180,7 @@ input[type=search]:disabled {
 }
 
 
-/*advantage БЛОК Доставим редкий товар под заказ*/
+/*advantage Доставим редкий товар под заказ*/
 
 .advantage {
   position: relative;
@@ -1194,19 +1193,20 @@ input[type=search]:disabled {
   padding: 0;
   display: block;
   height: 100%;
+  color:#000000;
   text-decoration: none;
-
+  text-transform: uppercase;
 }
 
 .title-advantage {
   position: relative;
   margin: 0;
   padding: 40px 125px;
+  box-sizing: border-box;
   font-size: 20px;
   line-height: 22px;
   text-align: center;
   letter-spacing: 0.2em;
-  text-transform: uppercase;
 }
 
 .title-advantage::before {
@@ -1235,9 +1235,6 @@ input[type=search]:disabled {
   background-position: center;
   background-repeat: no-repeat;
 }
-
-
-
 
 /*
 
@@ -1321,11 +1318,9 @@ input[type=search]:disabled {
   display: block;
 }
 
-.advantage:active {
+.advantage-link:active {
   opacity: 30%;
 }
-
-
 
 
 /*about-us-contacts    БЛОК О нас. Контакты*/
@@ -1347,10 +1342,8 @@ input[type=search]:disabled {
   position: absolute;
   top: -47px;
   left: 0;
-  z-index: 1;
   width: 84px;
   height: 7px;
-  color: #000000;
   background-color: #000000;
 }
 
@@ -1365,8 +1358,8 @@ input[type=search]:disabled {
 
 .transport-list {
   margin: 0;
-  padding: 0;
   margin-bottom: 30px;
+  padding: 0;
   list-style-type: none;
 }
 
@@ -1428,9 +1421,9 @@ input[type=search]:disabled {
 }
 
 .text-subtitle {
+  margin-bottom: 15px;
   font-weight: 700;
   font-size: 24px;
-  margin-bottom: 15px;
 }
 
 .contacts-address {
@@ -1469,9 +1462,9 @@ input[type=search]:disabled {
 
 .contacts-time {
   margin: 0;
+  margin-bottom: 30px;
   padding: 0;
   list-style-type: none;
-  margin-bottom: 30px;
 }
 
 .text-time {
@@ -1509,53 +1502,57 @@ input[type=search]:disabled {
 
 .container-subscribe {
   padding-top: 64px;
-
+  padding-bottom: 56px;
 }
 
 .subscribe-text {
-  margin-bottom: 144px;
-  margin-left: 7px;
+  margin-bottom: 140px;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-. title-subscribe {
-  width: 348px;
+.title-subscribe {
+  padding-left: 7px;
+  width: 580px;
   box-sizing: content-box;
 }
 
 .text-subscribe {
-  width: 553px;
+  padding-left: 47px;
+  width: 580px;
+  box-sizing: content-box;
 }
 
 .subscribe-email {
+  margin: 0 auto;
+  width: 1158px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding-bottom: 57px;
 }
 
 .subscribe-form {
+  width: 810px;
   display: flex;
   justify-content: flex-start;
   outline: none;
+  border: 0;
 }
 
-.email-email {
+.email-name {
   position: relative;
-  padding: 11px 0 14px 16px;
+  padding: 11px 20px 14px 16px;
   width: 557px;
   box-sizing: border-box;
   font-family: "Rubik", sans-serif;
   font-size: 18px;
   line-height: 30px;
   color: #444444;
-  opacity: 1;
-  background-color: #F0F0F0;
+  background-color: transparent;
   border: 0;
-  outline: none;
   border-bottom: 3px solid #C4C4C4;
+  outline: none;
 }
 
 .subscribe-form ::placeholder {
@@ -1565,29 +1562,30 @@ input[type=search]:disabled {
   opacity: 0.5;
 }
 
-.email-email:invalid {
+.email-name:invalid {
   color: #444444;
   opacity: 1;
   border-bottom: 3px solid #FF3D3D;
-  background-color: #F0F0F0;
+  background-color: transparent;
 }
 
-.email-email:focus {
+.email-name:focus {
   background-color: #DCDCDC;
-  outline: none;
   border-bottom: 3px solid #C4C4C4;
 }
 
-.email-email:active {
+.email-name:active {
   border-bottom: 3px solid #C4C4C4;
   color: red;
-  background-color: #F0F0F0;
+  background-color: transparent;
 }
 
 .subscribe-button {
-  padding: 18px 39px;
-  box-sizing: border-box;
+  margin: 0;
+  padding: 18px 0;
   width: 253px;
+  text-align: center;
+  box-sizing: border-box;
   border: 3px solid #C4C4C4;
   background-color: transparent;
 }
@@ -1610,7 +1608,6 @@ input[type=search]:disabled {
 .subscribe-button:active {
   border: 3px solid #000000;
   background-color: #000000;
-
 }
 
 .text-email {
@@ -1657,11 +1654,11 @@ input[type=search]:disabled {
   outline-offset: 2px;
 }
 
-.wrapper {
+.footer-wrapper {
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
-  margin-bottom: 60px;
+  margin-bottom: 61px;
 }
 
 .footer-left {
@@ -1679,12 +1676,13 @@ input[type=search]:disabled {
 }
 
 .text-address-footer {
+  margin: 0;
   font-size: 16px;
   line-height: 20px;
-  color: #FFFFFF;
   font-family: "Rubik", sans-serif;
   font-style: normal;
   font-weight: 400;
+  color: #FFFFFF;
 }
 
 .footer-address::before {
@@ -1698,12 +1696,11 @@ input[type=search]:disabled {
 }
 
 .footer-center {
-  padding-top: 8px;
+  padding-top: 5px;
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 444px;
-  /*min-height: 123px;*/
 }
 
 .footer-navigation-list {
@@ -1719,7 +1716,7 @@ input[type=search]:disabled {
 }
 
 .footer-navigation-item {
-  margin-right: 35px;
+  margin-right: 32px;
 }
 
 .footer-navigation-item:last-child {
@@ -1728,6 +1725,7 @@ input[type=search]:disabled {
 
 .button-footer {
   color: #FFFFFF;
+  line-height: 21.13px;
 }
 
 .button-footer:hover {
@@ -1755,8 +1753,6 @@ input[type=search]:disabled {
   text-decoration-line: none;
   outline: 2px solid #af4fff;
 }
-
-
 
 .footer-social-list {
   margin: 0;
@@ -1805,22 +1801,29 @@ input[type=search]:disabled {
   outline-offset: 2px;
 }
 
-
 .footer-right {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-end;
   width: 240px;
-  min-height: 123px;
+  box-sizing: border-box;
 }
-
+/*
 .footer-phone {
   display: block;
   margin-bottom: 64px;
-}
+}*/
 
 .text-phone-footer {
+  margin-bottom: 60px;
+  padding-right: 2px;
+  padding-top: 2px;
+  display: block;
+  box-sizing: border-box;
+  font-size: 16px;
+  line-height: 20p;
+  text-align: right;
   color: #FFFFFF;
   text-decoration-line: underline;
   text-decoration-color: #FFFFFF;
@@ -1848,6 +1851,7 @@ input[type=search]:disabled {
 }
 
 .htmlacademy-link {
+  display: block;
   color: #FFC700;
 }
 
