--- a/styles/styles.css
+++ b/styles/styles.css
@@ -373,6 +373,7 @@ body {
   right: auto;
   margin: auto 0;
 }
+
 /*
 .come-in {
   padding-left: 25px;
@@ -477,6 +478,7 @@ body {
   right: 0;
   width: 50px;
   height: 50px;
+  z-index: 4;
   box-sizing: border-box;
   border-radius: 50%;
   border: 2px solid #000000;
@@ -494,6 +496,7 @@ body {
   right: 0;
   width: 50px;
   height: 50px;
+  z-index: 4;
   box-sizing: border-box;
   border-radius: 50%;
   border: 2px solid #000000;
@@ -507,15 +510,15 @@ body {
 .subcatalog {
   position: absolute;
   margin: 0 auto;
-  padding: 0 60px 0 60px;
-  top: 50px;
+  padding: 33px 60px 37px 60px;
+  top: 33px;
   left: -60px;
-  z-index: 5;
+  z-index: 3;
   width: 1160px;
-  min-height: 160px;
+  min-height: 120px;
   box-sizing: border-box;
   list-style-type: none;
-  background-color: tomato;
+  background-color: #FFE17F;
   display: none;
 }
 
@@ -781,6 +784,7 @@ body {
   justify-content: space-between;
   align-items: flex-end;
 }
+
 .promo-product-none {
   display: none;
 }
@@ -2323,20 +2327,35 @@ body {
 
 /*main-inner СТРАНИЦА КАТАЛОГА*/
 
+.inner-header-container {
+  position: relative;
+  margin: 0 auto;
+  padding-left: 60px;
+  padding-right: 60px;
+  box-sizing: border-box;
+  min-height: 206px;
+  color: #000000;
+  /*z-index: 1;*/
+  background: linear-gradient(to bottom,
+      #FFFFFF 20px, #FFE17F 20px 100%)
+}
+
+
+
+
+
 .inner-header {
   padding: 0 21px 0 60px;
-  margin-bottom: 29px;
+  margin-bottom: 34px;
   box-sizing: border-box;
-
 }
 
 .inner-header .title {
-  margin-bottom: 10px;
+  margin-bottom: 16px;
 }
 
 .breadcrumbs {
   margin: 0;
-  margin-bottom: 5px;
   padding: 0;
   display: flex;
   justify-content: flex-start;
@@ -2365,7 +2384,7 @@ body {
 }
 
 .text-breadcrumbs {
-  margin-bottom: 0;
+  display: block;
   font-size: 16px;
   line-height: 20px;
   color: #000000;
@@ -2398,7 +2417,6 @@ body {
 }
 
 .catalog {
-
   display: flex;
   justify-content: space-between;
 }
@@ -2407,8 +2425,6 @@ body {
   margin: 0 auto;
   padding-top: 25px;
   width: 200px;
-
-
 }
 
 .filter-title {
@@ -2417,9 +2433,9 @@ body {
   margin-bottom: 72px;
   font-size: 16px;
   line-height: 18.78px;
+  text-align: left;
   text-transform: uppercase;
   letter-spacing: 0.2em;
-  text-align: left;
 }
 
 .product-filter-form {
@@ -2449,14 +2465,13 @@ body {
 
 .product-filter-group-title {
   margin-bottom: 27px;
-  text-align: left;
 }
 
 .range-scale {
   position: relative;
+  margin-bottom: 11px;
   width: 200px;
   height: 2px;
-  margin-bottom: 11px;
   background-color: #DCDCDC;
 }
 
@@ -2468,27 +2483,40 @@ body {
 
 .range-toggle {
   position: absolute;
-  margin-bottom: 3px;
+  padding: 0;
   width: 18px;
   height: 18px;
   box-sizing: border-box;
-  background: #EBEBEB;
+  background-color: #EBEBEB;
   border: 2px solid #000000;
   border-radius: 50%;
   cursor: pointer;
 }
 
+.square {
+  position: absolute;
+  top: -4px;
+  left: -4px;
+  width: 22px;
+  height: 22px;
+  box-sizing: border-box;
+  border-radius: 0;
+  outline: 2px solid #af4fff;
+  display: none;
+}
+
 .range-toggle:hover {
-  opacity: 50%;
+  opacity: 0.5;
 }
 
 .range-toggle:active {
-  background: #000000;
+  background-color: #000000;
 }
 
-.range-toggle:focus {
-  outline: 2px solid #af4fff;
-  outline-offset: 2px;
+.range-toggle:focus .square {
+  display: block;
+  /*outline: 2px solid #af4fff;
+  outline-offset: 2px;*/
 }
 
 .toggle-min {
@@ -2737,9 +2765,9 @@ body {
 
 
 .sorting-title {
-  margin-right: 206px;
+  margin-right: 204px;
   font-size: 16px;
-  line-height: 18.7px;
+  line-height: 19px;
   letter-spacing: 0.2em;
   text-transform: uppercase;
 }
@@ -2760,10 +2788,6 @@ body {
   font-size: 18px;
   line-height: 30px;
   color: #000000;
-  /*background-image: url("../images/tick-sorting.svg");
-  background-repeat: no-repeat;
-  background-position: right center;
-  background-size: 10px 7px;*/
   border: none;
   background: transparent;
   appearance: none;
@@ -2790,7 +2814,6 @@ body {
 }
 
 .text-select:focus {
-  opacity: 1;
   outline: 2px solid #af4fff;
   outline-offset: 2px;
 }
@@ -2865,9 +2888,11 @@ body {
 }
 
 .product-card-image {
+  margin-bottom: 32px;
+  display: block;
   width: 360px;
   height: 380px;
-  margin-bottom: 23px;
+
 }
 
 .product-card-image-wrapper:after {
@@ -2886,13 +2911,6 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
-}
-
-.product-card-title {
-  font-weight: 700;
-  line-height: 20px;
-  letter-spacing: -2%;
-  color: #000000;
 }
 
 .product-card-price {
