--- a/styles/styles.css
+++ b/styles/styles.css
@@ -191,6 +191,14 @@ body {
   opacity: 0.3;
 }
 
+.search-catalog ::placeholder {
+  color: #000000;
+  font-size: 16x;
+  line-height: 20px;
+  opacity: 1;
+}
+
+
 /*
 .form::after {
   content: "";
@@ -208,15 +216,24 @@ body {
   display: block;
 }*/
 
-.search:focus {
+.search-focus {
+  position: absolute;
+  width: 360px;
+  height: 46px;
+  top: -1px;
+  left: -1px;
   outline: 2px solid #af4fff;
-  outline-offset: 2px;
+  display: none;
+}
+
+
+.search:focus + .search-focus {
+  display: block;
 }
 
 .search ::placeholder:active {
   opacity: 1;
 }
-
 
 .search:disabled {
   opacity: 0.3;
@@ -337,6 +354,12 @@ body {
   background-position: center left;
   background-repeat: no-repeat;
 }
+
+.come-out-hidden {
+  visibility: hidden;
+}
+
+
 
 .come-out {
   opacity: 0.3;
@@ -1261,6 +1284,15 @@ body {
   background-repeat: no-repeat;
 }
 
+.info {
+  position: absolute;
+  width: 2px;
+  height: 12px;
+  top: 44px;
+  right: 62px;
+  opacity: 0.3;
+}
+
 /*
 
 .advantage {
@@ -1329,9 +1361,9 @@ body {
   background-color: #FFC700;
 }
 
-.advantage-link:hover .title-advantage::after {
-  color: #000000;
-  stroke: #000000;
+.advantage-link:hover .info {
+ /* color: #000000;
+  stroke: #000000;*/
   opacity: 1;
 }
 
@@ -1918,7 +1950,7 @@ body {
 .modal {
   position: relative;
   margin: auto;
-  padding: 72px 80px;
+  padding: 62px 70px;
   box-sizing: border-box;
   border: 10px solid #000000;
   background: #FFFFFF;
@@ -1933,8 +1965,8 @@ body {
 .modal-close-button {
   position: absolute;
   padding: 0;
-  top: 84px;
-  right: 80px;
+  top: 74px;
+  right: 70px;
   width: 26px;
   height: 24px;
   background-color: #ffffff;
@@ -1970,7 +2002,7 @@ body {
 }
 
 .advantage-form-wrapper {
-  margin-bottom: 42px;
+  margin-bottom: 34px;
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
@@ -2096,36 +2128,45 @@ body {
   word-break: break-all;
 }
 
+
+
+
 .field-group-amount {
+  position: relative;
   display: flex;
   flex-direction: column;
-  position: relative;
-  background-color: tomato;
 }
 
 .field-group-amount ::placeholder {
   color: #000000;
+  line-height: 20px;
   opacity: 1;
 }
 
-.eee {
-  display: flex;
+.field-amount {
+  position: relative;
+  display: block;
+  margin: 0;
+  padding: 20px 60px;
+  width: 180px;
+  background-color: #F0F0F0;
 }
 
-/*
+
 .button-amount {
   position: absolute;
+  margin: 0;
+  padding: 0;
   display: block;
   width: 60px;
   height: 60px;
   box-sizing: border-box;
-  border: 0;
-  outline: none;
+  border: none;
   background-color: transparent;
-}*/
-
+}
+/*
 .button-amount {
-  display: block;
+  position: absolute;
   margin: 0;
   padding: 0;
   width: 60px;
@@ -2137,24 +2178,32 @@ body {
   background-image: url("..images/minus.svg");
   background-position: center;
   background-repeat: no-repeat;
-}
-
+}*/
+/*
 .button-amount:focus {
   outline: 2px solid #af4fff;
   offset: -2px;
-}
+}*/
 
 .button-amount-minus {
-  background-image: url("..images/minus.svg");
-  background-position: center;
-  background-repeat: no-repeat;
+  bottom: 0;
+  left: 0;
+}
+.button-amount-plus {
+  bottom: 0;
+  right: 0;
 }
 
+
+/*
 .button-amount-plus {
   background-image: url("..images/plus.svg");
   background-position: center;
   background-repeat: no-repeat;
 }
+
+*/
+
 
 .field-email:invalid {
   outline: 2px solid #FF3D3D;
@@ -2201,29 +2250,6 @@ body {
   color: #000000;
 }
 
-
-
-
-
-
-
-
-
-/*
-.field-group-amount input[type="button"] {
-  position: absolute;
-  margin: 0;
-  padding: 0;
-  width: 60px;
-  height: 60px;
-  box-sizing: border-box;
-  border: none;
-  background-color: transparent;
-  cursor: pointer;
-}
-*/
-
-
 /*Количество*/
 
 .label-field-icon {
@@ -2231,9 +2257,7 @@ body {
   margin-bottom: 11px;
   display: flex;
   align-items: flex-end;
-
   max-width: 180px;
-  background-color: #af4fff;
 }
 
 
@@ -2294,9 +2318,6 @@ body {
 }
 
 
-
-
-
 .advantage-form-button {
   padding: 10px 4.55px;
   width: 200px;
@@ -2314,13 +2335,13 @@ body {
 }
 
 .advantage-form-button:focus {
-  background: linear-gradient(to top,
-      transparent 40%, #FFE17F 40% 60%, transparent 60%);
   outline: 2px solid #af4fff;
   outline-offset: 2px;
 }
 
-
+.error-amount {
+  outline: 2px solid #FF3D3D;
+}
 
 
 
@@ -2446,9 +2467,12 @@ body {
 .product-filter-group {
   position: relative;
   margin: 0;
+  margin-bottom: 50px;
   padding: 0;
   border: none;
-  margin-bottom: 47px;
+  font: inherit;
+  vertical-align: baseline;
+
 }
 
 .product-filter-group-title::before {
@@ -2462,14 +2486,13 @@ body {
 }
 
 /* Range */
-
 .product-filter-group-title {
   margin-bottom: 27px;
 }
 
 .range-scale {
   position: relative;
-  margin-bottom: 11px;
+  margin-bottom: 12px;
   width: 200px;
   height: 2px;
   background-color: #DCDCDC;
@@ -2515,8 +2538,6 @@ body {
 
 .range-toggle:focus .square {
   display: block;
-  /*outline: 2px solid #af4fff;
-  outline-offset: 2px;*/
 }
 
 .toggle-min {
@@ -2536,17 +2557,20 @@ body {
 }
 
 .catalog-filter-label {
+  margin-right: 65px;
+  margin-left: -12px;
   display: flex;
   justify-content: center;
-  margin-right: 67px;
-  margin-left: -13px;
   font-size: 14px;
   line-height: 20px;
-  color: rgba(0, 0, 0 0.3);
+  color: rgba(0, 0, 0, 0.3);
 }
 
 .range-input {
-  padding: 0 3px;
+  padding: 0 4px;
+  font-size: 14px;
+  line-height: 20px;
+  color: rgba(0, 0, 0, 0.3);
   background-color: transparent;
   border: none;
   appearance: textfield;
@@ -2560,9 +2584,7 @@ body {
 
 /*COLOR*/
 .title-color {
-  margin-bottom: 24px;
-
-
+  margin-bottom: 20px;
 }
 
 .product-filter-list {
@@ -2571,15 +2593,23 @@ body {
   list-style-type: none;
 }
 
-.product-filter-item:not(:last-child) {
+.product-filter-item {
   padding: 0;
+}
+
+.product-filter-item:not(:last-child) {
   margin-bottom: 17px;
+}
+
+.product-filter-group-color {
+  margin-bottom: 47px;
+
 }
 
 /* Control */
 
 .title-bluetooth {
-  margin-bottom: 18px;
+  margin-bottom: 19px;
 }
 
 .control {
@@ -3151,12 +3181,3 @@ body {
   color: rgba(0, 0, 0 0.3);
 
 }
-
-
-
-
-
-/*
-.select-control {
-  color: #000000;
-}*/
